@@ -1,1 +1,1 @@
-Christian Heckendorf - vaseros@gmail.com
+Christian Heckendorf - heckendorfc@gmail.com
